<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в техподдержку</string>
    <string name="user_terms">Пользовательское соглашение</string>
    <string name="support_email" translatable="false">mishhard@yandex.ru</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_terms_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_practicum_url" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="clear_search_request">Очистить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="retry">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="Country">Страна</string>
    <string name="Genre">Жанр</string>
    <string name="Year">Год</string>
    <string name="Album">Альбом</string>
    <string name="Duration">Длительность</string>
</resources>