<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/mainBackgroundColor"
    style="@style/LinearLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                style="@style/TextView" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            android:text="@string/search"
            app:icon="@drawable/search"
            style="@style/MainButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/libraryButton"
            android:text="@string/media_library"
            app:icon="@drawable/library"
            style="@style/MainButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            style="@style/MainButton" />
    </LinearLayout>
</LinearLayout>
