<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/settingsBackgroundColor"
    style="@style/LinearLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="42dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/navigation_icon"
                android:layout_height="match_parent"
                android:layout_marginEnd="28dp"
                android:src="@drawable/back"
                app:tint="?attr/primaryIconTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/settings"
                android:textColor="?attr/primaryTextColor"
                style="@style/TextView" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_button"
            android:backgroundTint="?attr/mainBackgroundColor"
            android:text="@string/dark_theme"
            android:textColor="?attr/primaryTextColor"
            app:thumbTint="@color/thumb_light_gray"
            app:trackTint="@color/track_light_light_gray"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/settings_list_font_size"
            android:thumb="@drawable/knob"
            android:track="@drawable/track"/>

        <com.google.android.material.button.MaterialButton
            style="@style/SettingsButton"
            android:text="@string/share_app"
            app:icon="@drawable/share" />

        <com.google.android.material.button.MaterialButton
            style="@style/SettingsButton"
            android:text="@string/support"
            app:icon="@drawable/group" />

        <com.google.android.material.button.MaterialButton
            style="@style/SettingsButton"
            android:text="@string/user_terms"
            app:icon="@drawable/vector" />
    </LinearLayout>
</LinearLayout>
