<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="PlayerActivity"
    android:background="?attr/settingsBackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/navigation_icon"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="?attr/primaryIconTint"
            android:maxLines="1"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/track_cover"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/track_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="1:1"
           />

        <TextView
            android:id="@+id/track_name"
            style="@style/PlayerHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:scrollHorizontally="true"
            app:layout_constraintTop_toBottomOf="@id/track_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/PlayerSubHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:src="@drawable/play"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <ImageView
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/add_button"
            app:layout_constraintTop_toTopOf="@id/play"
            app:layout_constraintBottom_toBottomOf="@id/play"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:layout_constraintStart_toStartOf="@id/track_cover" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/like"
            app:layout_constraintTop_toTopOf="@id/play"
            app:layout_constraintBottom_toBottomOf="@id/play"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:layout_constraintEnd_toEndOf="@id/track_cover" />

        <TextView
            android:id="@+id/timer"
            style="@style/PlayerBaseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" />

        <TextView
            android:id="@+id/duration_label"
            style="@style/PlayerLabelText"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:text="@string/Duration"
            app:layout_constraintTop_toBottomOf="@id/timer"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/duration_value"
            style="@style/PLayerValueText"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/duration_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/album_label"
            style="@style/PlayerLabelText"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:text="@string/Album"
            app:layout_constraintTop_toBottomOf="@id/duration_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/album_value"
            style="@style/PLayerValueText"
            android:gravity="end"
            android:layout_marginEnd="16dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="@id/album_label"
            app:layout_constraintStart_toEndOf="@id/album_label"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/year_label"
            style="@style/PlayerLabelText"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:text="@string/Year"
            app:layout_constraintTop_toBottomOf="@id/album_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/year_value"
            style="@style/PLayerValueText"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/year_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/genre_label"
            style="@style/PlayerLabelText"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:text="@string/Genre"
            app:layout_constraintTop_toBottomOf="@id/year_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/PLayerValueText"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/genre_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/country_label"
            style="@style/PlayerLabelText"
            android:layout_marginTop="17dp"
            android:layout_marginStart="16dp"
            android:text="@string/Country"
            app:layout_constraintTop_toBottomOf="@id/genre_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="28dp"/>

        <TextView
            android:id="@+id/country_value"
            style="@style/PLayerValueText"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/country_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="28dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
